--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
     constraints {
         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
             because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
@@ -73,7 +74,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.5.0'
+  //  implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -120,6 +121,10 @@ dependencies {
     //FCM
     implementation 'com.google.firebase:firebase-messaging-ktx:23.1.2'
 
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+
+
 //    //glide - image downloader
 //    implementation 'com.github.bumptech.glide:glide:4.13.0'
 //    ksp 'com.github.bumptech.glide:compiler:4.13.0'
@@ -136,4 +141,16 @@ dependencies {
 //    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.webkit:webkit:1.7.0'
     kapt "androidx.room:room-compiler:2.5.2"
+
+    // Unit Testing
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "org.mockito:mockito-core:3.11.2"
+    testImplementation "org.mockito:mockito-inline:3.11.2"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+
+    // Mockito-Kotlin
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0" // Add this line for Kotlin support
+
 }
